"Select continent" added. Example GeoJSON for each

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "selectContinent": "Select the continent you want to play on",
   "select": "Please select",
   "correct": "Correct!",
   "wrong": "Wrong!"
