Progress and time added to command container

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
   "selectContinent": "Select the continent you want to play on",
-  "select": "Please select",
+  "select": "Select",
   "correct": "Correct!",
   "wrong": "Wrong!"
 }
