--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,10 @@
 {
   "selectContinent": "Select the continent you want to play on",
+  "africa": "Africa",
+  "asia": "Asia, Australia and Oceania",
+  "america": "America",
+  "europe": "Europe and Russia",
   "select": "Select",
   "correct": "Correct!",
-  "wrong": "Wrong!"
+  "wrong": "Wrong"
 }
