--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,22 @@
 {
   "selectContinent": "Select the continent you want to play on",
   "africa": "Africa",
+  "america": "America",
   "asia": "Asia",
   "australia": "Australia and Oceania",
-  "america": "America",
   "europe": "Europe and Russia",
   "select": "Select",
   "correct": "Correct!",
-  "wrong": "Wrong"
+  "wrong": "Wrong",
+  "resultHeading": "Result",
+  "correctPicks": "Correct picks:",
+  "outOf": "out of",
+  "notGoodEnough": "That is not good enough for a place on the highscore list",
+  "veryGood": "Very good! You have reached a place in the high score!",
+  "highscore": "Highscore",
+  "position": "Position",
+  "correctAnswers": "Correct answers",
+  "timeNeeded": "Time needed",
+  "minutesAbbr": "min",
+  "secondsAbbr": "s"
 }
