Localisation of "Play Again" button added

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,5 +18,6 @@
   "correctAnswers": "Correct answers",
   "timeNeeded": "Time needed",
   "minutesAbbr": "min",
-  "secondsAbbr": "s"
+  "secondsAbbr": "s",
+  "playAgainButton": "Play Again"
 }
