Outline for highscores.html & Minor details

--- a/locales/de.json
+++ b/locales/de.json
@@ -18,5 +18,6 @@
   "correctAnswers": "Korrekte Antworten",
   "timeNeeded": "Benötigte Zeit",
   "minutesAbbr": "min",
-  "secondsAbbr": "s"
+  "secondsAbbr": "s",
+  "playAgainButton": "Erneut spielen"
 }
