Support for variables in translation strings

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,8 +9,7 @@
   "correct": "Correct!",
   "wrong": "Wrong",
   "resultHeading": "Result",
-  "correctPicks": "Correct picks:",
-  "outOf": "out of",
+  "correctPicks": "Correct picks: {correctAnswers} out of {overallCountriesToQuery}",
   "notGoodEnough": "That is not good enough for a place on the highscore list",
   "veryGood": "Very good! You have reached a place in the high score!",
   "highscore": "Highscore",
