German translation added & Minor layout changes

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,5 +1,11 @@
 {
   "selectContinent": "Wähle den Kontinent zum Spielen aus",
+  "welcomeInfoboxIntro": "Trainiere Deine Geographie&shy;kenntnisse, indem Du das richtige Land auf einer Karte auswählst. Es werden sämtliche Staaten der Welt unterstützt.",
+  "welcomeInfoboxHelp": "Möchtest du mithelfen?",
+  "githubText": "Verbessere den Code",
+  "translateText": "Übersetze das Spiel",
+  "donateText": "Spende ein paar Sats",
+  "dontShow": "Beim Start nicht anzeigen",
   "africa": "Afrika",
   "america": "Amerika",
   "asia": "Asien",
@@ -9,8 +15,7 @@
   "correct": "Korrekt!",
   "wrong": "Falsch",
   "resultHeading": "Ergebnis",
-  "correctPicks": "Richtig gewählt:",
-  "outOf": "von",
+  "correctPicks": "Richtig gewählt: {correctAnswers} von {overallCountriesToQuery}",
   "notGoodEnough": "Das ist nicht gut genug für einen Platz auf der Bestenliste",
   "veryGood": "Sehr gut! Du hast einen Platz in der Bestenliste ergattert!",
   "highscore": "Bestenliste",
