--- a/locales/en.json
+++ b/locales/en.json
@@ -14,6 +14,7 @@
   "select": "Select",
   "correct": "Correct!",
   "wrong": "Wrong",
+  "gameOver": "Game over",
   "resultHeading": "Result",
   "correctPicks": "Correct picks: {correctAnswers} out of {overallCountriesToQuery}",
   "notGoodEnough": "That is not good enough for a place on the highscore list",
