--- a/locales/es.json
+++ b/locales/es.json
@@ -1,3 +1,30 @@
 {
-  "select": ""
+  "selectContinent": "Selecciona el continente en el que quieres jugar",
+  "welcomeInfoboxIntro": "Practica tus conocimientos de geografía eligiendo el país correcto en un mapa. Todos los países del mundo son soportados.",
+  "welcomeInfoboxHelp": "¿Quieres ayudar?",
+  "githubText": "Mejorar el código",
+  "translateText": "Traducir el juego",
+  "donateText": "Donar algunos Sats",
+  "dontShow": "No mostrar al inicio",
+  "africa": "África",
+  "america": "América",
+  "asia": "Asia",
+  "australia": "Australia y Oceanía",
+  "europe": "Europa y Rusia",
+  "select": "Selecciona",
+  "correct": "¡Correcto!",
+  "wrong": "Error",
+  "gameOver": "Fin de la partida",
+  "resultHeading": "Resultado",
+  "correctPicks": "Selecciones correctas: {correctAnswers} de {overallCountriesToQuery}",
+  "notGoodEnough": "Eso no es suficiente para un puesto en la lista de mejores puntuaciones",
+  "veryGood": "¡Muy bien! ¡Has alcanzado la posición {posición} en la lista de mejores puntuaciones",
+  "highscore": "Mejores puntuaciones",
+  "position": "Posición",
+  "correctAnswers": "Respuestas correctas",
+  "timeNeeded": "Tiempo necesario",
+  "minutesAbbr": "min",
+  "secondsAbbr": "s",
+  "playAgainButton": "Juega otra vez",
+  "highscoreNoGame": "No se ha jugado hasta ahora"
 }
