--- a/locales/es.json
+++ b/locales/es.json
@@ -18,7 +18,7 @@
   "resultHeading": "Resultado",
   "correctPicks": "Selecciones correctas: {correctAnswers} de {overallCountriesToQuery}",
   "notGoodEnough": "Eso no es suficiente para un puesto en la lista de mejores puntuaciones",
-  "veryGood": "¡Muy bien! ¡Has alcanzado la posición {posición} en la lista de mejores puntuaciones",
+  "veryGood": "¡Muy bien! ¡Has alcanzado la posición {position} en la lista de mejores puntuaciones",
   "highscore": "Mejores puntuaciones",
   "position": "Posición",
   "correctAnswers": "Respuestas correctas",
