--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
-  "selectContinent": "Select the continent you want to play on",
-  "welcomeInfoboxIntro": "Practice your geography skills by picking the right country on a map. All countries of the world are supported.",
+  "selectRegion": "Select the region you want to play on",
+  "welcomeInfoboxIntro": "Practice your geography skills by picking the right country or state on a map. All countries and a few states of the world are supported.",
   "welcomeInfoboxHelp": "Want to help?",
   "githubText": "Improve the code",
   "translateText": "Translate game",
@@ -8,9 +8,13 @@
   "dontShow": "Don't show on startup",
   "africa": "Africa",
   "america": "America",
+  "usa-states": "USA - States",
   "asia": "Asia",
   "australia": "Australia and Oceania",
   "europe": "Europe and Russia",
+  "deu-states": "Germany - Federal States",
+  "fra-regions": "France - Regions",
+  "all-countries": "All countries",
   "select": "Select",
   "correct": "Correct!",
   "wrong": "Wrong",
