--- a/locales/es.json
+++ b/locales/es.json
@@ -1,5 +1,5 @@
 {
-  "selectContinent": "Selecciona el continente en el que quieres jugar",
+  "selectRegion": "Selecciona el continente en el que quieres jugar",
   "welcomeInfoboxIntro": "Practica tus conocimientos de geografía eligiendo el país correcto en un mapa. Todos los países del mundo son soportados.",
   "welcomeInfoboxHelp": "¿Quieres ayudar?",
   "githubText": "Mejorar el código",
