de and es locales updated from Transifex

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,6 +1,6 @@
 {
   "selectRegion": "Wähle die Region zum Spielen aus",
-  "welcomeInfoboxIntro": "Trainiere Dei­ne Geographie&shy;­kenntnisse, indem Du das richtige Land auf einer Karte auswählst. Es werden sämtliche Staaten der Welt unterstützt.",
+  "welcomeInfoboxIntro": "Trainiere Dei­ne Geographie&shy;­kenntnisse, indem Du das richtige Land bzw. die Region auf einer Karte auswählst. Es werden sämtliche Staaten der Welt unterstützt.",
   "welcomeInfoboxHelp": "Möchtest Du mithelfen?",
   "githubText": "Verbessere den Code",
   "translateText": "Übersetze das Spiel",
@@ -8,12 +8,13 @@
   "dontShow": "Beim Start nicht anzeigen",
   "africa": "Afrika",
   "america": "Amerika",
+  "usa-states": "USA - Staaten",
   "asia": "Asien",
   "australia": "Australien und Ozeanien",
   "europe": "Europa und Russland",
-  "all-countries": "Alle Länder",
   "deu-states": "Deutschland - Bundesländer",
-  "usa-states": "USA - Staaten",
+  "fra-regions": "Frankreich - Regionen",
+  "all-countries": "Alle Länder",
   "select": "Selektiere",
   "correct": "Korrekt!",
   "wrong": "Falsch",
