--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,6 @@
 {
-  "selectRegion": "Selecciona el continente en el que quieres jugar",
-  "welcomeInfoboxIntro": "Practica tus conocimientos de geografía eligiendo el país correcto en un mapa. Todos los países del mundo son soportados.",
+  "selectRegion": "Seleccione la región en la que desea jugar",
+  "welcomeInfoboxIntro": "Practica tus conocimientos de geografía eligiendo el país o estado correcto en un mapa. Todos los países y algunos estados del mundo son soportados.",
   "welcomeInfoboxHelp": "¿Quieres ayudar?",
   "githubText": "Mejorar el código",
   "translateText": "Traducir el juego",
@@ -8,9 +8,13 @@
   "dontShow": "No mostrar al inicio",
   "africa": "África",
   "america": "América",
+  "usa-states": "EE.UU. - Estados",
   "asia": "Asia",
   "australia": "Australia y Oceanía",
   "europe": "Europa y Rusia",
+  "deu-states": "Alemania - Estados federados",
+  "fra-regions": "Francia - Regiones",
+  "all-countries": "Todos los países",
   "select": "Selecciona",
   "correct": "¡Correcto!",
   "wrong": "Error",
