Australia, India and South Africa added

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,12 +7,15 @@
   "donateText": "Donate some Sats",
   "dontShow": "Don't show on startup",
   "africa": "Africa",
+  "za": "South Africa - Provinces",
   "america": "America",
   "us": "USA - States",
   "asia": "Asia",
   "cn": "China - Provinces",
+  "in": "India - States and union territories",
   "my": "Malaysia - States",
   "australia": "Australia and Oceania",
+  "au": "Australia - States",
   "europe": "Europe and Russia",
   "de": "Germany - Federal States",
   "fr": "France - Regions",
