de and es locales synced with Transifex

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,16 +1,21 @@
 {
   "selectRegion": "Wähle die Region zum Spielen aus",
-  "welcomeInfoboxIntro": "Trainiere Dei­ne Geographie&shy;­kenntnisse, indem Du das richtige Land bzw. die Region auf einer Karte auswählst. Es werden sämtliche Staaten der Welt unterstützt.",
+  "welcomeInfoboxIntro": "Trainiere Dei­ne Geographie&shy;­kenntnisse, indem Du das richtige Land bzw. die Region auf einer Karte auswählst. Es werden sämtliche Staaten und einige Regionen der Welt unterstützt.",
   "welcomeInfoboxHelp": "Möchtest Du mithelfen?",
   "githubText": "Verbessere den Code",
   "translateText": "Übersetze das Spiel",
   "donateText": "Spende ein paar Sats",
   "dontShow": "Beim Start nicht anzeigen",
   "africa": "Afrika",
+  "za": "Südafrika - Provinzen",
   "america": "Amerika",
   "us": "USA - Staaten",
   "asia": "Asien",
+  "cn": "China - Provinzen",
+  "in": "Indien - Bundesstaaten und Unionsterritorien",
+  "my": "Malaysia - Bundesstaaten",
   "australia": "Australien und Ozeanien",
+  "au": "Australien - Staaten",
   "europe": "Europa und Russland",
   "de": "Deutschland - Bundesländer",
   "fr": "Frankreich - Regionen",
