--- a/locales/es.json
+++ b/locales/es.json
@@ -7,13 +7,18 @@
   "donateText": "Donar algunos Sats",
   "dontShow": "No mostrar al inicio",
   "africa": "África",
+  "za": "Sudáfrica - Provincias",
   "america": "América",
-  "usa-states": "EE.UU. - Estados",
+  "us": "EE.UU. - Estados",
   "asia": "Asia",
+  "cn": "China - Provincias",
+  "in": "India - Estados y territorios",
+  "my": "Malasia - Estados",
   "australia": "Australia y Oceanía",
+  "au": "Australia - Estados",
   "europe": "Europa y Rusia",
-  "deu-states": "Alemania - Estados federados",
-  "fra-regions": "Francia - Regiones",
+  "de": "Alemania - Estados federados",
+  "fr": "Francia - Regiones",
   "all-countries": "Todos los países",
   "select": "Selecciona",
   "correct": "¡Correcto!",
