--- a/locales/en.json
+++ b/locales/en.json
@@ -7,18 +7,25 @@
   "donateText": "Donate some Sats",
   "dontShow": "Don't show on startup",
   "africa": "Africa",
+  "ng": "Nigeria - Geopolitical States",
   "za": "South Africa - Provinces",
   "america": "America",
+  "br": "Brazil - Provinces",
+  "mx": "Mexico - States",
   "us": "USA - States",
   "asia": "Asia",
+  "bd": "Bangladesh - Districts",
   "cn": "China - Provinces",
+  "id": "Indonesia - Provinces",
   "in": "India - States and union territories",
   "my": "Malaysia - States",
+  "pk": "Pakistan - Administrative units",
   "australia": "Australia and Oceania",
   "au": "Australia - States",
   "europe": "Europe and Russia",
   "de": "Germany - Federal States",
   "fr": "France - Regions",
+  "ru": "Russia - Oblasts and Republics",
   "all-countries": "All countries",
   "select": "Select",
   "correct": "Correct!",
