de.json and es.json synced with Transifex

--- a/locales/de.json
+++ b/locales/de.json
@@ -7,18 +7,25 @@
   "donateText": "Spende ein paar Sats",
   "dontShow": "Beim Start nicht anzeigen",
   "africa": "Afrika",
+  "ng": "Nigeria - Geopolitische Staaten",
   "za": "Südafrika - Provinzen",
   "america": "Amerika",
+  "br": "Brasilien - Provinzen",
+  "mx": "Mexiko - Staaten",
   "us": "USA - Staaten",
   "asia": "Asien",
+  "bd": "Bangladesch - Distrikte",
   "cn": "China - Provinzen",
+  "id": "Indonesien - Provinzen",
   "in": "Indien - Bundesstaaten und Unionsterritorien",
   "my": "Malaysia - Bundesstaaten",
+  "pk": "Pakistan - Verwaltungseinheiten",
   "australia": "Australien und Ozeanien",
   "au": "Australien - Staaten",
   "europe": "Europa und Russland",
   "de": "Deutschland - Bundesländer",
   "fr": "Frankreich - Regionen",
+  "ru": "Russland - Oblaste und Republiken",
   "all-countries": "Alle Länder",
   "select": "Selektiere",
   "correct": "Korrekt!",
