--- a/locales/es.json
+++ b/locales/es.json
@@ -7,18 +7,25 @@
   "donateText": "Donar algunos Sats",
   "dontShow": "No mostrar al inicio",
   "africa": "África",
+  "ng": "Nigeria - Estados geopolíticos",
   "za": "Sudáfrica - Provincias",
   "america": "América",
+  "br": "Brasil - Provincias",
+  "mx": "México - Estados",
   "us": "EE.UU. - Estados",
   "asia": "Asia",
+  "bd": "Bangladesh - Distritos",
   "cn": "China - Provincias",
+  "id": "Indonesia - Provincias",
   "in": "India - Estados y territorios",
   "my": "Malasia - Estados",
+  "pk": "Pakistán - Unidades administrativas",
   "australia": "Australia y Oceanía",
   "au": "Australia - Estados",
   "europe": "Europa y Rusia",
   "de": "Alemania - Estados federados",
   "fr": "Francia - Regiones",
+  "ru": "Rusia - Óblastos y Repúblicas",
   "all-countries": "Todos los países",
   "select": "Selecciona",
   "correct": "¡Correcto!",
